Minor section spacing fixes

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -35,7 +35,7 @@ html {
 	}
 
 	p {
-		@apply leading-relaxed [&:not(:first-child)]:mt-4 dark:text-[#9E9E9E] text-[#3E3E3E]
+		@apply leading-relaxed [&:not(:first-child)]:my-2 dark:text-[#9E9E9E] text-[#3E3E3E]
 	}
 
 	code:not(pre code) {
